@@ -1,4 +1,8 @@
 
+2019-09-15  Ron Norman <rjn@inglenet.com>
+
+	* common.h: For HPUX set COB_ALLOW_UNALIGNED as undefined
+
 2019-09-10  Ron Norman <rjn@inglenet.com>
 
 	* fileio.c: Fix relative_read_size to use 'size_t' for GC file type
